<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.home.UserDetailsActivity">
    <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
    />

    <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/avatarImage"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/margin_left"
            android:textSize="@dimen/header_text"
    />

    <TextView
            android:id="@+id/userNamevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/usernameText"
            app:layout_constraintTop_toBottomOf="@+id/avatarImage"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/value_text"


    />
    <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/name_text"
            app:layout_constraintTop_toBottomOf="@+id/usernameText"
            android:layout_marginTop="@dimen/margin_top_between_elements"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"


    />
    <TextView
            android:id="@+id/nameTextvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@id/userNamevalue"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/value_text"


    />
    <TextView
            android:id="@+id/urlText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/url_text"
            app:layout_constraintTop_toBottomOf="@+id/nameText"
            android:layout_marginTop="@dimen/margin_top_between_elements"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"


    />
    <TextView
            android:id="@+id/urlTextValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/urlText"
            app:layout_constraintTop_toBottomOf="@id/nameTextvalue"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/value_text"
            android:autoLink="web"


    />


    <TextView
            android:id="@+id/repo_detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/repo_desc_text"
            app:layout_constraintTop_toBottomOf="@+id/urlText"
            android:layout_marginTop="@dimen/margin_top_between_elements"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"


    />

    <TextView
            android:id="@+id/repo_detail_text_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/repo_detail_text"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:maxLines="6"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="@+id/repo_detail_text"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/value_text"

    />
    <TextView
            android:id="@+id/repo_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/repo_name_text"
            android:layout_marginTop="@dimen/margin_top_between_elements"
            app:layout_constraintTop_toBottomOf="@+id/repo_detail_text_value"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"

    />
    <TextView
            android:id="@+id/repo_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/repo_name_text"
            app:layout_constraintTop_toBottomOf="@id/repo_detail_text_value"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/value_text"

    />
    <TextView
            android:id="@+id/repo_url_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/repo_url_text"
            app:layout_constraintTop_toBottomOf="@+id/repo_name_text"
            android:layout_marginTop="@dimen/margin_top_between_elements"
            android:textStyle="bold"
            android:textSize="@dimen/header_text"

    />
    <TextView
            android:id="@+id/repo_url_text_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/repo_name_value"
            android:layout_marginTop="15dp"
            android:maxLines="6"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/repo_url_text"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/value_text"
            android:autoLink="web"


    />
</androidx.constraintlayout.widget.ConstraintLayout>